--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,20 +8,37 @@ p{
 div{
     background-color: rgb(186, 19, 44);
 } */
-.caja1{
-    width: 150px;
-    height: 150px;
+.caja1 {
+    width: 50px;
+    height: 50px;
     background-color: rgb(89, 17, 16);
 }
 
-.caja2{
-    width: 250px;
-    height: 250px;
+.caja2 {
+    width: 50px;
+    height: 50px;
     background-color: #FFA500;
 }
 
-.caja3{
-    width: 350px;
-    height: 350px;
+.caja3 {
+    width: 50px;
+    height: 50px;
     background-color: hsl(30, 100%, 50%);
+}
+
+
+#foo {
+    color: orange;
+}
+
+a[title] {
+    color: green;
+}
+
+button:hover {
+    background-color: aquamarine;
+}
+
+input:disabled {
+    border: 2px solid orange;
 }
