--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,12 +9,12 @@ div{
     background-color: rgb(186, 19, 44);
 } */
 .caja1 {
-    width: 50px;
-    height: 50px;
+    width: 150px;
+    height: 150px;
     background-color: rgb(89, 17, 16);
 }
 
-.caja2 {
+/* .caja2 {
     width: 50px;
     height: 50px;
     background-color: #FFA500;
@@ -24,7 +24,7 @@ div{
     width: 50px;
     height: 50px;
     background-color: hsl(30, 100%, 50%);
-}
+} */
 
 
 #foo {
